# simple_logger

./: .gitignore  CMakeLists.txt  README.md
cmake/: common.cmake  simple_color.cmake  simple_config.cmake
include/simple_logger/: logger.h
src/: logger.cpp
test/: CMakeLists.txt  test_logger_multi_thread.cpp  test_simple_logger.cpp
